# news-aggregator-bot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml
aggregator/: __init__.py  __main__.py  config.py  pipeline.py  ranking.py  relevance.py  scheduler.py  storage.py  synth.py  text.py  url_norm.py  watchdog.py
aggregator/bot/: _authz.py  app.py  digest_lock.py
aggregator/bot/commands/: digest.py  help.py  start.py  status.py  topics.py
aggregator/delivery/: _html_filter.py  telegram.py
aggregator/prompts/: __init__.py  _rules_telegram_html.md  ai_blogs.md  ai_general.md  general_crypto.md  github_trending.md  watchlist.md
aggregator/scripts/: scan_rss_feeds.py
aggregator/sources/: __init__.py  _common.py  _ua.py  base.py  github.py  hn.py  polymarket.py  reddit.py  registry.py  rss.py
deploy/: README.md  news-aggregator.service
scripts/: merge_config.py  sync_vps.ps1  vendor_last30days.py
tests/: conftest.py  test_config.py  test_html_filter.py  test_main_cli.py  test_merge_config.py  test_pipeline.py  test_prompts.py  test_ranking.py  test_relevance.py  test_scan_rss_feeds.py  test_scheduler.py  test_serve_watchdog.py  test_storage.py  test_synth.py  test_telegram.py  test_url_norm.py  test_vendor_script.py  test_watchdog.py
tests/bot/: test_app_bootstrap.py  test_authz.py  test_digest.py  test_digest_lock.py  test_help.py  test_status.py  test_topics.py
tests/sources/: test_base.py  test_github.py  test_hn.py  test_polymarket.py  test_reddit.py  test_rss.py
(+7 files in other folders)
